minor edits to layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p class="lead">@R+ & TECHNOLOGY CAN BE FRIENDz</p>
     <hr class="my-4">
     <p>creative philosophies don't have to be unanimous, disagreement is positive! adding to thoughts by undermining them is how we stay sensitive humans and don't succumb to the inertia of mutual agreement and animal instinct that leads to an in (side) that always has an out (crowd) </p>
-    <a class="btn btn-lg" role="button" data-toggle="modal" data-target="#exampleModal">CLICK TO FORGET WHAT YOU KNOW</a>
+    <a class="btn btn-lg" role="button" href="https://cliosears.myportfolio.com/intro" target="_blank" >CLICK TO FORGET WHAT YOU KNOW</a>
 </div>
 
   <!-- PAGE CONTENT-->
@@ -54,7 +54,7 @@
           <div class="card-body">
             <h5 class="card-title">Getting older</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn">Go somewhere</a>
+            <a href="https://cliosears.myportfolio.com/getting-older" class="btn">see</a>
           </div>
         </div>
       </div>
@@ -63,9 +63,9 @@
         <div class="card">
           <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/5cefb766-977e-4026-b817-b709bcca8807_rw_3840.png?h=586f649ed80002b05f36f2c1330a7b58" class="card-img-top" alt="abstract artwork">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">untitled</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn">Go somewhere</a>
+            <a href="https://cliosears.myportfolio.com/untitled" class="btn">see</a>
           </div>
         </div>
       </div>
@@ -74,9 +74,9 @@
         <div class="card">
           <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/67be0769-9fd5-434d-9a55-7100030b2180_rw_1920.png?h=e25c83fd599e0fe6294e14875b446ef8" class="card-img-top" alt="abstract artwork">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">requiem for a love| things fall apart</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn">Go somewhere</a>
+            <a href="https://cliosears.myportfolio.com/requiem-for-a-love" class="btn">see</a>
           </div>
         </div>
       </div>
@@ -85,9 +85,9 @@
         <div class="card">
           <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/c6e7f4f6-0e60-4f5b-9568-372d8eecb4dd_rw_1200.png?h=4e96d268ca3b18f91de7fb99de48bc69" class="card-img-top" alt="abstract artwork">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">jonkunnu horsehead</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn">Go somewhere</a>
+            <a href="https://cliosears.myportfolio.com/jonkunnu-horsehead" class="btn">see</a>
           </div>
         </div>
       </div>
@@ -106,9 +106,9 @@
           <div class="card">
             <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/a6952ac8-7e60-41d9-a1fe-00c2588ac7ed_rw_1200.png?h=d87f29378d0d1b5e050047ca2137de0b" class="card-img-top" alt="textured abstract artwork">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Earth's surface c. 2030</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn">Go somewhere</a>
+              <a href="https://cliosears.myportfolio.com/earths-surface-c-2030" class="btn">see</a>
             </div>
           </div>
         </div>
@@ -117,9 +117,9 @@
           <div class="card">
             <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/778a394e-3b52-4bb2-81be-abc61bc330d1_rw_1200.jpg?h=aed329977aca3f6b832a3dd888b7fd1f" class="card-img-top" alt="textured abstract artwork">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">bodies {caribsea} </h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn">Go somewhere</a>
+              <a href="https://cliosears.myportfolio.com/bodies-caribsea" class="btn">see</a>
             </div>
           </div>
         </div>
@@ -128,9 +128,9 @@
           <div class="card">
             <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/51797e1d-b129-48fd-b0f3-a9101bb96325_rw_1200.png?h=febe65c0f0496bc27335366660df1984" class="card-img-top" alt="abstract artwork with texture">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">burnout</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn">Go somewhere</a>
+              <a href="https://cliosears.myportfolio.com/burnout" class="btn">see</a>
             </div>
           </div>
         </div>
@@ -139,9 +139,9 @@
           <div class="card">
             <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/843c23df-7265-4b4b-ad86-8d3851d7e675_rw_3840.png?h=19e7da74e6b008a97546713da92baddd" class="card-img-top" alt="abstract sculpture/painting">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">stuck in the mud (luv)</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn">Go somewhere</a>
+              <a href="https://cliosears.myportfolio.com/stuck-in-the-mudluv" class="btn">see</a>
             </div>
           </div>
         </div>
