minor changes to html

--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
 <!--navigation-->
  <header>
     <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
         <a class="navbar-brand" href="https://cliosears.myportfolio.com/intro"><img src="./images/IMG_0747.PNG"></a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#links">linx<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#anthropomorphisms">anthropomorphisms</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#topographies">topographies</a>
-        </li>
-      </ul>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button> 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#links">linx<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#anthropomorphisms">anthropomorphisms</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#topographies">topographies</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
  </header>
@@ -38,7 +43,7 @@
     <p class="lead">@R+ & TECHNOLOGY CAN BE FRIENDz</p>
     <hr class="my-4">
     <p>creative philosophies don't have to be unanimous, disagreement is positive! adding to thoughts by undermining them is how we stay sensitive humans and don't succumb to the inertia of mutual agreement and animal instinct that leads to an in (side) that always has an out (crowd) </p>
-    <a class="btn btn-lg" role="button" href="https://cliosears.myportfolio.com/intro" target="_blank" >CLICK TO FORGET WHAT YOU KNOW</a>
+    <a class="btn btn-lg" role="button" href="https://cliosears.myportfolio.com/intro" target="_blank"> CLICK TO FORGET WHAT YOU KNOW </a>
 </div>
 
   <!-- PAGE CONTENT-->
