compelteed application, ready to deploy

--- a/index.html
+++ b/index.html
@@ -10,31 +10,23 @@
 </head>
 <body>
 
-<!--navigation-->
- <header>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="https://cliosears.myportfolio.com/intro"><img src="./images/IMG_0747.PNG"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button> 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#links">linx<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#anthropomorphisms">anthropomorphisms</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#topographies">topographies</a>
-            </li>
-          </ul>
-        </div>
+<!-- navigation-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://cliosears.myportfolio.com/intro"><img src="./images/IMG_0747.PNG"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" aria-current="page" href="#links">linx</a>
+        <a class="nav-link" href="#anthropomorphisms">anthropomorphisms</a>
+        <a class="nav-link" href="#topographies">topographies</a>
       </div>
-    </nav>
- </header>
-<!--navigation end-->
+    </div>
+  </div>
+</nav>
+<!--naviagtion end-->
 
  <!--Jumbotron-->
 
@@ -46,7 +38,9 @@
     <a class="btn btn-lg" role="button" href="https://cliosears.myportfolio.com/intro" target="_blank"> CLICK TO FORGET WHAT YOU KNOW </a>
 </div>
 
-  <!-- PAGE CONTENT-->
+<!--Jumbotron end-->
+
+<!-- PAGE CONTENT-->
 
   <!--FIRST ROW -->
 
@@ -58,7 +52,7 @@
           <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/b9dd00f7-12e2-49fb-a528-93cad41f750e_rw_3840.jpg?h=3e7d766b6d20a166e881518f7137aa0e" class="card-img-top" alt="abstract artwork">
           <div class="card-body">
             <h5 class="card-title">Getting older</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">It was not until after I had begun to produce Anthropomorphisms that I came across the Rorschach test and projective testing as a practice in Psychology for its standardisation of human perception and experience. </p>
             <a href="https://cliosears.myportfolio.com/getting-older" class="btn">see</a>
           </div>
         </div>
@@ -69,7 +63,7 @@
           <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/5cefb766-977e-4026-b817-b709bcca8807_rw_3840.png?h=586f649ed80002b05f36f2c1330a7b58" class="card-img-top" alt="abstract artwork">
           <div class="card-body">
             <h5 class="card-title">untitled</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">While art is not to be constrained by interpretation, the power of art to expose deep-rooted perceptions and memories in its audience is invaluable to humanity's conscience and future. </p>
             <a href="https://cliosears.myportfolio.com/untitled" class="btn">see</a>
           </div>
         </div>
@@ -80,7 +74,7 @@
           <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/67be0769-9fd5-434d-9a55-7100030b2180_rw_1920.png?h=e25c83fd599e0fe6294e14875b446ef8" class="card-img-top" alt="abstract artwork">
           <div class="card-body">
             <h5 class="card-title">requiem for a love| things fall apart</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Although it is an outdated practice, I see the Rorschach test as a harbinger of the algorithm.  </p>
             <a href="https://cliosears.myportfolio.com/requiem-for-a-love" class="btn">see</a>
           </div>
         </div>
@@ -91,7 +85,7 @@
           <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/c6e7f4f6-0e60-4f5b-9568-372d8eecb4dd_rw_1200.png?h=4e96d268ca3b18f91de7fb99de48bc69" class="card-img-top" alt="abstract artwork">
           <div class="card-body">
             <h5 class="card-title">jonkunnu horsehead</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">While I would not encourage an interpretive approach of "coding content" from an Anthropomorphism, or trying to reconcile psychological precedents with a person’s interpretation, from what I have seen of different people's reaction to the series, there are commonalities between some and differences with others and all are significant. </p>
             <a href="https://cliosears.myportfolio.com/jonkunnu-horsehead" class="btn">see</a>
           </div>
         </div>
@@ -112,7 +106,7 @@
             <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/a6952ac8-7e60-41d9-a1fe-00c2588ac7ed_rw_1200.png?h=d87f29378d0d1b5e050047ca2137de0b" class="card-img-top" alt="textured abstract artwork">
             <div class="card-body">
               <h5 class="card-title">Earth's surface c. 2030</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Articulating the relationship  between my interventions with materials and the circumstances in which the art-making processes take place is one of the most difficult, yet important aspects of my practice.</p>
               <a href="https://cliosears.myportfolio.com/earths-surface-c-2030" class="btn">see</a>
             </div>
           </div>
@@ -123,7 +117,7 @@
             <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/778a394e-3b52-4bb2-81be-abc61bc330d1_rw_1200.jpg?h=aed329977aca3f6b832a3dd888b7fd1f" class="card-img-top" alt="textured abstract artwork">
             <div class="card-body">
               <h5 class="card-title">bodies {caribsea} </h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">I do not work in a vacuum and much of my motivation to create art comes from a difficulty with coming to terms with the world around me and seeking to build something of value.</p>
               <a href="https://cliosears.myportfolio.com/bodies-caribsea" class="btn">see</a>
             </div>
           </div>
@@ -134,7 +128,7 @@
             <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/51797e1d-b129-48fd-b0f3-a9101bb96325_rw_1200.png?h=febe65c0f0496bc27335366660df1984" class="card-img-top" alt="abstract artwork with texture">
             <div class="card-body">
               <h5 class="card-title">burnout</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">I created this piece, Burnout during the summer 2022. It came at a time when being a long way from home for a long time, I had very few personal connections with people around me and my life revolved around working a low-wage job and living day by day</p>
               <a href="https://cliosears.myportfolio.com/burnout" class="btn">see</a>
             </div>
           </div>
@@ -145,14 +139,17 @@
             <img src="https://cdn.myportfolio.com/d1c02bd9-d6a0-416e-bcc0-90239001bb82/843c23df-7265-4b4b-ad86-8d3851d7e675_rw_3840.png?h=19e7da74e6b008a97546713da92baddd" class="card-img-top" alt="abstract sculpture/painting">
             <div class="card-body">
               <h5 class="card-title">stuck in the mud (luv)</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Such heavy subdividing of a plane created surface area;  instead of the roughly 34 x 60 inches offered by the fence, there is a considerable expansion of physical depth and volume.</p>
               <a href="https://cliosears.myportfolio.com/stuck-in-the-mudluv" class="btn">see</a>
             </div>
           </div>
         </div>
-      </div><!-- close row -->
+      </div>
     </div>
     </div>
+    <!-- close row -->
+    <!-- page content done -->
+
     <div class="description">
         <h2> topographies</h2>
         <p> there are many limits that exist in the physical world and they're all based on the phsyics of materials. but one way do to things and represent things and think about things is never the only way. even the thingness of a thing is up for dispute.</p>
@@ -166,7 +163,8 @@
             <p> (eurocentric model of thinking)</p>
         </div>
         <div class="links">
-            <div id= links><h1> join the move</h1>
+            <div id= links>
+              <a href="mailto:inaliennation@gmail.com"><h1> join the move</h1></a>
                 <p>don't fear the out(side)</p>
             </div> 
         </div>
@@ -180,7 +178,7 @@
           <p>All content and images are kindly provided by !$pünx unltd!</p>
         </div>
     </footer>
-    
+    <!-- FOOTER done -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
